# chaintools

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  uv_check.yaml
.github/workflows/: pytest.yml  uv_check.yaml
chaintools/: __init__.py  annotate.py  chain_filter.py  cli.py  stats.py  test_utils.py  to_bed.py  to_paf.py  utils.py
chaintools-bio/: cli.py  to_bed.py  to_paf.py  to_sam.py  to_vcf.py
chaintools_bio/: __init__.py  annotate.py  chain_filter.py  cli.py  split.py  stats.py  test_utils.py  to_sam.py  to_vcf.py
src/: annotate.py  filter.py  invert.py  leviosam_utils.py  split.py  stats.py  to_bed.py  to_paf.py  to_sam.py  to_vcf.py  utils-test.py  utils.py
src/chaintools/: annotate.py  chain_filter.py  filter.py  invert.py  split.py  stats.py  test_utils.py  to_bed.py  to_paf.py  to_sam.py  to_vcf.py  utils-test.py  utils.py
testdata/: end_with_zero.chain  forward-split.chain  forward.chain  forward.no_ref.paf  forward.query.bed  forward.target.bed  query.fasta.fai  reversed-split.chain  reversed.chain  reversed.no_ref.paf  reversed.query.bed  reversed.target.bed  reversed2-split.chain  reversed2.chain  small.chain  source-target.sam  source-target.vcf  source.fasta  source.fasta.fai  target-query.chain  target-query.no_ref.paf  target-query.paf  target-query.query.bed  target-query.target.bed  target-query.vcf  target-source.vcf  variants.chain  variants.source.fasta  variants.source.fasta.fai  variants.target.fasta  variants.target.fasta.fai  variants.vcf
