[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaintools"
version = "0.4"
authors = [
  { name="Nae-Chyun Chen (@milkschen)" },
  { name="Nancy F. Hansen (@nhansen)" }
]
description = "Utilities for the genomic chain format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "pysam>=0.15.3",
  "intervaltree>=3.1.0",
  "typer>=0.9.0",
  "pandas"
]

[project.scripts]
chaintools = "chaintools.cli:main"

[project.urls]
"Homepage" = "https://github.com/milkschen/chaintools"
