[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaintools_bio"
version = "0.4.1"
authors = [
  { name="Nae-Chyun Chen (@milkschen)" },
  { name="Nancy F. Hansen (@nhansen)" }
]
description = "Utilities for the genomic chain format"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "intervaltree>=3.1.0",
  "pandas",
  "pysam>=0.15.3",
  "typer>=0.9.0",
]

[project.scripts]
chaintools_bio = "chaintools_bio.cli:main"

[project.urls]
"Homepage" = "https://github.com/milkschen/chaintools_bio"
